# tps-securite-python

./: .gitignore  README.md  pyproject.toml
src/tp1/: main.py
src/tp1/utils/: capture.py  lib.py  report.py
src/tp2/: Dockerfile  main.py
src/tp2/utils/: shell_code_analyzer.py
src/tp3/: main.py
src/tp3/utils/: captcha.py  session.py
tests/tp1/utils/: test_capture.py  test_lib.py  test_report.py
tests/tp3/utils/: test_captcha.py  test_session.py
